--- a/glmm_analysis.qmd
+++ b/glmm_analysis.qmd
@@ -377,8 +377,6 @@ df_implicit_rt <-
 # 8706 left = 9.9% removed
 ```
 
-The removal of accuracy outliers, incorrect trials and extreme RTs amounted to 6.9% of trials in the explicit and 6.7 in the implicit task.
-
 ### Aberrant RT means
 
 A first level of the RT outliers analysis is based on the overall mean RT of the participants. Participants with abnormally high RT means could represent various specific situations out of the range of our study: pathological conditions, attention deficits, or even more trivially low attention to the task. Such participants could bias both the overall results *and the analysis of the individual trials*: just like the accuracy outliers, the removal of their slow trials could result in a deletion of a large part of their responses, thus biasing the distributions. Let's visualize the distribution of the RT means in @fig-rt_means1 and [-@fig-rt_means2]
@@ -529,7 +527,7 @@ df_implicit_rt <-
 # alternative point of view: 18 participants excluded in the implicit task due to high error rates or overall abnormally slow RTs.
 ```
 
-At this step, 12 participants in the explicit task and 8 participants in the implicit task have been excluded due to high error rates or overall abnormally slow RTs. Let's visualize the RT means distributions again in @fig-rt_means3 and [-@fig-rt_means4].
+In the end, 18 participants have been excluded due to high error rates or overall abnormally slow RTs. Let's visualize the RT means distributions again in @fig-rt_means3 and [-@fig-rt_means4].
 
 ::: panel-tabset
 #### Tidied explicit task RT means
@@ -647,7 +645,7 @@ We will conduct a more detailed inspection of the RTs on a by-participant level.
 ```
 :::
 
-As expected, most of the participants have a small amount of very slow outlier trials, even by their own standards of RT. Once again, we are going to detect these outliers using MAD thresholds.
+As expected, most of the participants have a small amount of very slow outlier trials, even by their own standards of RT. Once again, we are going to detect these outliers using MAD thresholds. The RTs have been group by subsets of conditions, as we know that our experimental conditions could have affected them: thus, using a global median would necessarily flatten within-participant outcomes and have a major impact on the analyses.
 
 ```{r removing_rt_outlier_trials_per_participant}
 #| code-summary: "Removing outlier trials by-participant"
@@ -661,7 +659,7 @@ As expected, most of the participants have a small amount of very slow outlier t
 # 3 MADs threshold
 df_explicit_rt <-
   df_explicit_rt |> 
-  group_by(subjectid, congruence) |> 
+  group_by(subjectid, congruence, color) |> 
   mutate(
     rt_median = median(rt),
     rt_mad = mad(rt)
@@ -679,7 +677,7 @@ df_explicit_rt <-
 # 3 MADs threshold
 df_implicit_rt <-
   df_implicit_rt |> 
-  group_by(subjectid, congruence) |> 
+  group_by(subjectid, congruence, color) |> 
   mutate(
     rt_median = median(rt),
     rt_mad = mad(rt)
@@ -693,7 +691,7 @@ df_implicit_rt <-
 # (8166-7489)/8166 # 8.2% trials out
 ```
 
-The range defined by $\pm 3 \times MAD$ resulted in a deletion of 6.2% of trials in the explicit task and 7.6% of trials in the implicit task. Let's visualize the final distribution of RTs for each participant in @fig-rt_per_participant_3 and [-@fig-rt_per_participant_4]
+The range defined by $\pm 3 \times MAD$ resulted in a deletion of 6.6% of trials in the explicit task and 8.2% of trials in the implicit task. Let's visualize the final distribution of RTs for each participant in @fig-rt_per_participant_3 and [-@fig-rt_per_participant_4]
 
 ::: {.panel-tabset .column-page-inset-right}
 #### Tidied explicit task RT per participant
@@ -765,7 +763,7 @@ We are going to fit Generalized Linear Mixed Models (GLMM) on the RT data. As op
 
 ### Model fitting
 
-To accomodate the RTs, the distribution chosen here will be a Gamma distribution with an identity link function. The predictors of the RT outcomes in the models are the **Group**, the **Congruence** condition and the **Color** condition. The random factors here are participants. The models could account for the varying RT means of each participant with a *random intercept per participant*, the varying effect of **Congruence** for each participant with a *slope on Congruence per participant*, and the varying effect of **Color** for each participant with a *slope on Color per participant*. These random effects will be added if they contribute significantly to the quality of the models.
+The predictors of the RT outcomes in the models are the **Group**, the **Congruence** condition and the **Color** condition. The random factors here are participants. The models could account for the varying RT means of each participant with a *random intercept per participant*, the varying effect of **Congruence** for each participant with a *slope on Congruence per participant*, and the varying effect of **Color** for each participant with a *slope on Color per participant*. These random effects will be added if they contribute significantly to the quality of the models. To accomodate the RTs, several models and distributions will be tested and compared using model quality indices: Gamma distribution with an identity link function.
 
 Alternatively, we could also transform our data using a Box-Cox transformation to bring the RTs closer to normality and fit LMMs. Using the `tidymodels` workflows, we can easily fit all of these models and compare their quality.
 
@@ -812,6 +810,14 @@ model_recipe_lmm_im <-
 
 # ─── Specifying the distributions for the models ──────────────────────────────
 
+# GLMM, Gamma distribution, identity link
+glmm_gamma_id <-
+  linear_reg() |> 
+  set_engine(
+    "glmer",
+    family = Gamma(link = "identity")
+  )
+
 # GLMM, Inverse Gaussian distribution, identity link
 glmm_inverse_id <-
   linear_reg() |> 
@@ -836,6 +842,7 @@ glmm_gaussian <-
 # Listing these models
 # GLMMs
 model_specs_glmm <- list(
+  glmm_gamma_id    = glmm_gamma_id,
   glmm_inverse_id  = glmm_inverse_id,
   glmm_inverse_log = glmm_inverse_log,
   glmm_gaussian    = glmm_gaussian
@@ -903,14 +910,20 @@ model_all_workflows_fitted <-
   ungroup() |> 
   select(-c(recipe, model, formula, workflow, model_perf))
 
+# ─── Comparing the models' quality among those that converged ─────────────────
 model_selection <-
   model_all_workflows_fitted |> 
-  filter(formula_id != "formula_0" & convergence == TRUE) |> 
+  filter(
+    formula_id != "formula_0" & 
+    convergence == TRUE
+  ) |> 
   group_by(task, model_id) |> 
   mutate(best_model = ifelse(AICc == min(AICc), TRUE, FALSE)) |> 
   filter(best_model == TRUE)
-```
 
+# inverse log models with random intercepts per-participant are the best GLMMs 
+# for both tasks
+```
 
 ```{r check_the_best_models}
 #| fig-label: fig-model_checks
@@ -918,60 +931,35 @@ model_selection <-
 #| fig-subcap: true
 #| layout-ncol: 1
 
+best_glmm_explicit <- model_selection$fitted_model[[1]]
+best_glmm_implicit <- model_selection$fitted_model[[4]]
+
 # ─── Model checks ───────────────────────────
-# glmm_ex_optimal |> 
-#   check_model(
-#     check = c(
-#       "pp_check",
-#       "homogeneity",
-#       "outliers",
-#       "vif",
-#       "qq",
-#       "reqq"
-#       )
-#   )
-# 
-# lmm_ex_optimal |>  
-#   check_model(
-#     check = c(
-#       "pp_check",
-#       "linearity",
-#       "homogeneity",
-#       "outliers",
-#       "vif",
-#       "qq",
-#       "reqq"
-#       )
-#   )
-# 
-# glmm_im_optimal |> 
-#   check_model(
-#     check = c(
-#       "pp_check",
-#       "homogeneity",
-#       "outliers",
-#       "vif",
-#       "qq",
-#       "reqq"
-#       )
-#   )
-# 
-# lmm_im_optimal |>  
-#   check_model(
-#     check = c(
-#       "pp_check",
-#       "linearity",
-#       "homogeneity",
-#       "outliers",
-#       "vif",
-#       "qq",
-#       "reqq"
-#       )
-#   )
+best_glmm_explicit |>
+  check_model(
+    # check = c(
+    #   "homogeneity",
+    #   "outliers",
+    #   "vif",
+    #   "qq",
+    #   "reqq"
+    #   )
+  )
+
+best_lmm_explicit |>
+  check_model(
+    # check = c(
+    #   "pp_check",
+    #   "linearity",
+    #   "homogeneity",
+    #   "outliers",
+    #   "vif",
+    #   "qq"
+    #   )
+  )
 ```
 
-:::{.panel-tabset .column-page-inset-right}
-
+::: {.panel-tabset .column-page-inset-right}
 #### Explicit task
 
 ```{r model_plots_ex}
@@ -983,125 +971,71 @@ model_selection <-
 
 # ─── Model effects plots ───────────────────────────
 
-# # setting dodge width for all the geoms
-# dw <- .75
-# # stat text size
-# st <- 7
-# # legend and axis text size
-# txt <- 32
-# 
-# # marginal means predictions
-# # glmm
-# glmm_preds <- 
-#   glmm_ex_optimal |> 
-#   estimate_means(at = c("aphantasia", "congruence"))
-# # glmm intercept
-# glmm_intercept <- (glmm_ex_optimal |> model_parameters())$Coefficient[1]
-# 
-# # lmm
-# lmm_preds <-  
-#   lmm_ex_optimal |> 
-#   estimate_means(
-#     at = c("aphantasia", "congruence"), 
-#     lmerTest.limit = 9000, 
-#     pbkrtest.limit = 9000
-#     )
-# # lmm intercept
-# lmm_intercept <- (lmm_ex_optimal |> model_parameters())$Coefficient[1]
-# 
-# # ─── GLMM ───
-# df_explicit_rt |> 
-#   ggplot(aes(
-#     x = congruence,
-#     y = rt_explicit,
-#     fill = aphantasia,
-#     color = aphantasia
-#   )) +
-#   # linear modelling of the differences
-#   geom_line(
-#     data = glmm_preds,
-#     aes(
-#       y = Mean,
-#       group = aphantasia
-#     ),
-#     position = position_dodge(width = dw),
-#     linewidth = 1.5,
-#     linetype = 1,
-#     show.legend = FALSE
-#   ) +
-#   # predicted means of the model
-#   geom_pointrange2(
-#     data = glmm_preds,
-#     aes(
-#       x = congruence,
-#       y = Mean,
-#       ymin = CI_low,
-#       ymax = CI_high,
-#       group = aphantasia
-#       ),
-#     color = "black",
-#     position = position_dodge(width = dw),
-#     size = 1,
-#     linewidth = .75,
-#     show.legend = FALSE
-#   ) +
-#   # intercept
-#   geom_hline(yintercept = glmm_intercept, linetype = 2) +
-#   labs( 
-#     x = NULL, 
-#     y = "Response time (ms)"
-#     ) +
-#   scale_x_discrete(labels = c("Congruent", "Incongruent")) +
-#   scale_fill_okabeito(name = "Aphantasia: ", labels = c("Yes", "No")) +
-#   scale_color_okabeito(guide = NULL)
-# 
-# # ─── LMM ───
-# lmm_recipe_ex|> 
-#   prep()|> 
-#   bake(df_explicit_rt) |> 
-#   ggplot(aes(
-#     x = congruence,
-#     y = rt_explicit,
-#     fill = aphantasia,
-#     color = aphantasia
-#   )) +
-#   # linear modelling of the differences
-#   geom_line(
-#     data = lmm_preds,
-#     aes(
-#       y = Mean,
-#       group = aphantasia
-#     ),
-#     position = position_dodge(width = dw),
-#     linewidth = 1.5,
-#     linetype = 1,
-#     show.legend = FALSE
-#   ) +
-#   # predicted means of the model
-#   geom_pointrange2(
-#     data = lmm_preds,
-#     aes(
-#       x = congruence,
-#       y = Mean,
-#       ymin = CI_low,
-#       ymax = CI_high,
-#       group = aphantasia
-#       ),
-#     color = "black",
-#     position = position_dodge(width = dw),
-#     size = 1,
-#     linewidth = .75,
-#     show.legend = FALSE
-#   ) +
-#   # intercept
-#   geom_hline(yintercept = lmm_intercept, linetype = 2) +
-#   labs( 
-#     x = NULL, 
-#     y = "Response time (standardized)"
-#     ) +
-#   scale_x_discrete(labels = c("Congruent", "Incongruent")) +
-#   scale_fill_okabeito(name = "Aphantasia: ", labels = c("Yes", "No")) +
-#   scale_color_okabeito(guide = NULL)
+# setting dodge width for all the geoms
+dw <- .75
+# stat text size
+st <- 7
+# legend and axis text size
+txt <- 32
+
+# marginal means predictions
+best_glmm_explcit_preds <-
+  best_glmm_explicit |>
+  estimate_means(at = c("aphantasia", "congruence"))
+
+best_glmm_implcit_preds <-
+  best_glmm_implicit |>
+  estimate_means(at = c("aphantasia", "congruence"))
+  
+# overall means
+rt_mean_explicit <- df_explicit_rt$rt |> mean()
+rt_mean_implicit <- df_implicit_rt$rt |> mean()
+
+# plot
+df_explicit_rt |>
+  ggplot(aes(
+    x = congruence,
+    y = rt,
+    fill = aphantasia,
+    color = aphantasia
+  )) +
+  # linear modelling of the differences
+  geom_line(
+    data = best_glmm_explcit_preds,
+    aes(
+      y = Mean,
+      group = aphantasia
+    ),
+    position = position_dodge(width = dw),
+    linewidth = 1.5,
+    linetype = 1,
+    show.legend = FALSE
+  ) +
+  # predicted means of the model
+  geom_pointrange2(
+    data = best_glmm_explcit_preds,
+    aes(
+      x = congruence,
+      y = Mean,
+      ymin = CI_low,
+      ymax = CI_high,
+      group = aphantasia
+      ),
+    color = "black",
+    position = position_dodge(width = dw),
+    size = 1,
+    linewidth = .75,
+    show.legend = FALSE
+  ) +
+  # intercept
+  geom_hline(yintercept = rt_mean_explicit, linetype = 2) +
+  labs(
+    x = NULL,
+    y = "Response time (ms)"
+    ) +
+  scale_x_discrete(labels = c("Congruent", "Incongruent")) +
+  scale_fill_okabeito(name = "Aphantasia: ", labels = c("Yes", "No")) +
+  scale_color_okabeito(guide = NULL)
 ```
 
 #### Implicit task
@@ -1113,127 +1047,51 @@ model_selection <-
 #|   - "Group x Congruence interaction in the GLMM for the implicit task."
 #|   - "Group x Congruence interaction in the LMM for the implicit task."
 
-# ─── Model effects plots ───────────────────────────
+# ─── Model effects plot ───────────────────────────
+df_implicit_rt |>
+  ggplot(aes(
+    x = congruence,
+    y = rt,
+    fill = aphantasia,
+    color = aphantasia
+  )) +
+  # linear modelling of the differences
+  geom_line(
+    data = best_glmm_implcit_preds,
+    aes(
+      y = Mean,
+      group = aphantasia
+    ),
+    position = position_dodge(width = dw),
+    linewidth = 1.5,
+    linetype = 1,
+    show.legend = FALSE
+  ) +
+  # predicted means of the model
+  geom_pointrange2(
+    data = best_glmm_implcit_preds,
+    aes(
+      x = congruence,
+      y = Mean,
+      ymin = CI_low,
+      ymax = CI_high,
+      group = aphantasia
+      ),
+    color = "black",
+    position = position_dodge(width = dw),
+    size = 1,
+    linewidth = .75,
+    show.legend = FALSE
+  ) +
+  # intercept
+  geom_hline(yintercept = rt_mean_implicit, linetype = 2) +
+  labs(
+    x = NULL,
+    y = "Response time (ms)"
+    ) +
+  scale_x_discrete(labels = c("Congruent", "Incongruent")) +
+  scale_fill_okabeito(name = "Aphantasia: ", labels = c("Yes", "No")) +
+  scale_color_okabeito(guide = NULL)
 
-# # setting dodge width for all the geoms
-# dw <- .75
-# # stat text size
-# st <- 7
-# # legend and axis text size
-# txt <- 32
-# 
-# # marginal means predictions
-# # glmm
-# glmm_preds_im <- 
-#   glmm_im_optimal |> 
-#   estimate_means(at = c("aphantasia", "congruence"))
-# # glmm intercept
-# glmm_intercept_im <- (glmm_im_optimal |> model_parameters())$Coefficient[1]
-# 
-# # lmm
-# lmm_preds_im <-  
-#   lmm_im_optimal |> 
-#   estimate_means(
-#     at = c("aphantasia", "congruence"), 
-#     lmerTest.limit = 9000, 
-#     pbkrtest.limit = 9000
-#     )
-# # lmm intercept
-# lmm_intercept_im <- (lmm_im_optimal |> model_parameters())$Coefficient[1]
-# 
-# # ─── GLMM ───
-# df_implicit_rt |> 
-#   ggplot(aes(
-#     x = congruence,
-#     y = rt_implicit,
-#     fill = aphantasia,
-#     color = aphantasia
-#   )) +
-#   # linear modelling of the differences
-#   geom_line(
-#     data = glmm_preds_im,
-#     aes(
-#       y = Mean,
-#       group = aphantasia
-#     ),
-#     position = position_dodge(width = dw),
-#     linewidth = 1.5,
-#     linetype = 1,
-#     show.legend = FALSE
-#   ) +
-#   # predicted means of the model
-#   geom_pointrange2(
-#     data = glmm_preds_im,
-#     aes(
-#       x = congruence,
-#       y = Mean,
-#       ymin = CI_low,
-#       ymax = CI_high,
-#       group = aphantasia
-#       ),
-#     color = "black",
-#     position = position_dodge(width = dw),
-#     size = 1,
-#     linewidth = .75,
-#     show.legend = FALSE
-#   ) +
-#   # intercept
-#   geom_hline(yintercept = glmm_intercept_im, linetype = 2) +
-#   labs( 
-#     x = NULL, 
-#     y = "Response time (ms)"
-#     ) +
-#   scale_x_discrete(labels = c("Congruent", "Incongruent")) +
-#   scale_fill_okabeito(name = "Aphantasia: ", labels = c("Yes", "No")) +
-#   scale_color_okabeito(guide = NULL)
-# 
-# # ─── LMM ───
-# lmm_recipe_im|> 
-#   prep()|> 
-#   bake(df_implicit_rt) |> 
-#   ggplot(aes(
-#     x = congruence,
-#     y = rt_implicit,
-#     fill = aphantasia,
-#     color = aphantasia
-#   )) +
-#   # linear modelling of the differences
-#   geom_line(
-#     data = lmm_preds_im,
-#     aes(
-#       y = Mean,
-#       group = aphantasia
-#     ),
-#     position = position_dodge(width = dw),
-#     linewidth = 1.5,
-#     linetype = 1,
-#     show.legend = FALSE
-#   ) +
-#   # predicted means of the model
-#   geom_pointrange2(
-#     data = lmm_preds_im,
-#     aes(
-#       x = congruence,
-#       y = Mean,
-#       ymin = CI_low,
-#       ymax = CI_high,
-#       group = aphantasia
-#       ),
-#     color = "black",
-#     position = position_dodge(width = dw),
-#     size = 1,
-#     linewidth = .75,
-#     show.legend = FALSE
-#   ) +
-#   # intercept
-#   geom_hline(yintercept = lmm_intercept_im, linetype = 2) +
-#   labs( 
-#     x = NULL, 
-#     y = "Response time (standardized)"
-#     ) +
-#   scale_x_discrete(labels = c("Congruent", "Incongruent")) +
-#   scale_fill_okabeito(name = "Aphantasia: ", labels = c("Yes", "No")) +
-  # scale_color_okabeito(guide = NULL)
 ```
 :::
-
